	* Port to FreeBSD 5 and Solaris (as of yet, untested)
	* Switched to own version of getnstr() that always accepts both
	  ^H and ^?
	* Now use 'ee' as the default rcfile editor. virus is still a compile
	  time option - see README for details.
	* A giant code cleanup that centralizes necessary globals, removes
	  unnecessary variables and #defines...

1.3.10 (2003/10/22)
	* Added a mode flag to the open call for inprogress lock files.
	  (jilles)

1.3.9 (2003/09/06)
	* Fixed the bug where editing options file wouldn't work on same
	  session as registration.
	* Changed ttyplay timeout to 20 minutes with a better error msg.
	* Made a zero length response on registration just dump you
	  back to the main menu.

1.3.7 (2003/09/06)
	* Fixed the infamous hlen bug! I was rewinding to the beginning
	  of payload, not header. 

1.3.5 (2003/09/05)
	* Returned SIGWINCH to defaults after exiting virus. This was
	  probably the screen resize crash bug. (maybe?)

1.3.1 (2003/08/30)
	* First shot at an engine to strip out graphics sets. It is a lot
	  harder than I would have thought, but doable at a 99% or so
		success rate, I think, which should at least allow people to
		view games in other graphics sets somewhat.

1.2.22 (2003/08/29)
	* Expanded README
	* Hope to have caught the error in a partial read of the error.

1.2.21 (2003/08/28)
	* Added a README since I noticed people were downloading this.

1.2.20 (2003/08/24)
	* Added additional check on payload length. Just a sanity thing.

1.2.19 (2003/08/24)
	* Fixed (hopefully) that nasty bug that occurs when a partial read
	  after header read returned, and caused the next header read to
		basically read random data (and thus a random length).

1.2.18 (2003/08/14)
	* After determining select() on files sucks ass, I've just reduced
		the polling interval on the ttyplay engine to 100ms, and given
		up on an otherwise proper select call. Humans shouldn't notice
		the latency, but I always will... grrr...

1.2.17 (2003/08/14)